[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lsme"
version = "0.1.0"
description = "Local Structural Matrix Embeddings for graphs"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20.0",
    "networkx>=2.5",
    "pandas>=1.3.0",
    "scikit-learn>=1.0.0",
    "torch>=2.0.0",
]
