[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lsme"
version = "0.2.0"
description = "Local Structural Matrix Embeddings for graphs"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.20.0",
    "networkx>=2.5",
    "torch>=2.0.0",
]
