[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lsme"
version = "0.2.0"
description = "Local Structural Matrix Embeddings for graphs"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "LSME Authors", email = "lsme@example.com" }
]
keywords = ["graph", "embeddings", "machine-learning", "neural-network", "graph-neural-network"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.20.0",
    "networkx>=2.5",
    "torch>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/LSME"
Documentation = "https://yourusername.github.io/LSME"
Repository = "https://github.com/yourusername/LSME"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.4.0",
    "mkdocstrings>=0.24.0",
    "mkdocstrings-python>=1.7.0",
]
