[project]
name = "lsme-examples"
version = "0.1.0"
description = "LSME library example notebooks"
requires-python = ">=3.9"
dependencies = [
    "lsme",
    "matplotlib>=3.5.0",
    "plotly>=5.18.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.4.0",
    "umap-learn>=0.5.5",
    "seaborn>=0.12.0",
    "jupyterlab>=4.0.0",
    "ipykernel>=6.0.0",
    "ipywidgets>=8.0.0",
    "tqdm>=4.0.0",
]

[tool.uv.sources]
lsme = { path = "..", editable = true }
